# ups-tsshara-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: install-docker.sh  protocol_sniffer.py
src/ups_tsshara_monitor/: __main__.py
ups_tsshara_monitor/: __init__.py  __main__.py  config.py  modbus.py  mqtt.py  poller.py  registers.py
